--- a/sections/logos.liquid
+++ b/sections/logos.liquid
@@ -3,8 +3,6 @@
   {{ "logos.css" | asset_url | stylesheet_tag }}
 
   {%- assign title                 = section.settings.title -%}
-  {%- assign text_position         = section.settings.text_position -%}
-  {%- assign text_position_mobile  = section.settings.text_position_mobile -%}
   {%- assign color_palette         = section.settings.color_palette -%}
   {%- assign padding_top           = section.settings.padding_top -%}
   {%- assign padding_bottom        = section.settings.padding_bottom -%}
@@ -16,95 +14,61 @@
   {%- capture variables -%}
     {%- case padding_top -%}
       {%- when 'none' -%}
-        --padding-top: 0;
+        --padding-top: 1px;
+        --margin-top: -1px;
       {%- when 'small' -%}
-        --padding-top: 60px;
+        --padding-top: 40px;
       {%- when 'medium' -%}
         --padding-top: 84px;
       {%- when 'large' -%}
-        --padding-top: 96px;
+        --padding-top: 128px;
     {%- endcase -%}
 
     {%- case padding_bottom -%}
       {%- when 'none' -%}
         --padding-bottom: 0;
       {%- when 'small' -%}
-        --padding-bottom: 60px;
+        --padding-bottom: 40px;
       {%- when 'medium' -%}
         --padding-bottom: 84px;
       {%- when 'large' -%}
-        --padding-bottom: 96px;
+        --padding-bottom: 128px;
     {%- endcase -%}
 
     {%- case padding_top_mobile -%}
       {%- when 'none' -%}
-        --padding-top-mobile: 0;
+        --padding-top-mobile: 1px;
+        --margin-top-mobile: -1px;
       {%- when 'small' -%}
-        --padding-top-mobile: 29px;
+        --padding-top-mobile: 40px;
       {%- when 'medium' -%}
-        --padding-top-mobile: 45px;
+        --padding-top-mobile: 70px;
       {%- when 'large' -%}
-        --padding-top-mobile: 60px;
+        --padding-top-mobile: 100px;
     {%- endcase -%}
 
     {%- case padding_bottom_mobile -%}
       {%- when 'none' -%}
         --padding-bottom-mobile: 0;
       {%- when 'small' -%}
-        --padding-bottom-mobile: 29px;
+        --padding-bottom-mobile: 40px;
       {%- when 'medium' -%}
-        --padding-bottom-mobile: 45px;
+        --padding-bottom-mobile: 70px;
       {%- when 'large' -%}
-        --padding-bottom-mobile: 60px;
-    {%- endcase -%}
-
-    {%- case text_position -%}
-      {%- when 'left' -%}
-        --flex-direction: row;
-        --justify-content: flex-start;
-        --align-items: flex-start;
-        --padding: 0 0 0 36px;
-        --text-align: left;
-        --text-max-width: 280px;
-      {%- when 'center' -%}
-        --flex-direction: column;
-        --justify-content: center;
-        --align-items: center;
-        --padding: 36px 0 0;
-        --text-align: center;
-        --text-max-width: none;
-      {%- when 'right' -%}
-        --flex-direction: row-reverse;
-        --justify-content: flex-start;
-        --align-items: flex-start;
-        --padding: 0 36px 0 0;
-        --text-align: right;
-        --text-max-width: 280px;
-    {%- endcase -%}
-
-    {%- case text_position_mobile -%}
-      {%- when 'left' -%}
-        --text-align-mobile: left;
-        --padding-x: 0;
-      {%- when 'center' -%}
-        --text-align-mobile: center;
-        --padding-x: 16px;
-      {%- when 'right' -%}
-        --text-align-mobile: right;
-        --padding-x: 0;
+        --padding-bottom-mobile: 100px;
     {%- endcase -%}
   {%- endcapture -%}
   {% comment %} CSS variables end {% endcomment %}
 
   <div
-    class="logos__wrapper{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} logos__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} logos__wrapper--padding-bottom{%- endif -%}"
+    class="logos__wrapper palette-{{ color_palette }}{% if padding_top != blank or padding_top_mobile != blank %} logos__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} logos__wrapper--padding-bottom{%- endif -%}"
     style="{{- variables | escape -}}"
   >
     <div class="logos__container container">
       <div class="logos__columns">
         {%- if title != blank -%}
           <div class="logos__col">
-            <h2 class="logos__title h5">{{- title -}}</h2>
+            <h2 class="logos__title h6">{{- title -}}</h2>
           </div>
         {%- endif -%}
 
@@ -170,33 +134,25 @@
           {
             "value": "two",
             "label": "Color set 2"
+          },
+          {
+            "value": "three",
+            "label": "Color set 3"
+          },
+          {
+            "value": "four",
+            "label": "Color set 4"
+          },
+          {
+            "value": "five",
+            "label": "Color set 5"
           }
         ],
-        "default": "two"
+        "default": "three"
       },
       {
         "type": "header",
         "content": "Desktop settings"
-      },
-      {
-        "type": "select",
-        "id": "text_position",
-        "label": "Title position",
-        "options": [
-          {
-            "value": "left",
-            "label": "Left"
-          },
-          {
-            "value": "center",
-            "label": "Center"
-          },
-          {
-            "value": "right",
-            "label": "Right"
-          }
-        ],
-        "default": "left"
       },
       {
         "type": "select",
@@ -249,26 +205,6 @@
       {
         "type": "header",
         "content": "Mobile settings"
-      },
-      {
-        "type": "select",
-        "id": "text_position_mobile",
-        "label": "Title position",
-        "options": [
-          {
-            "value": "left",
-            "label": "Left"
-          },
-          {
-            "value": "center",
-            "label": "Center"
-          },
-          {
-            "value": "right",
-            "label": "Right"
-          }
-        ],
-        "default": "center"
       },
       {
         "type": "select",
