--- a/sections/mosaic.liquid
+++ b/sections/mosaic.liquid
@@ -6,7 +6,7 @@
 
   {%- assign button_label          = section.settings.button_label -%}
   {%- assign button_url            = section.settings.button_url -%}
-  {%- assign layout                = section.settings.layout -%}
+  {%- assign title                 = section.settings.title -%}
   {%- assign color_palette         = section.settings.color_palette -%}
   {%- assign padding_top           = section.settings.padding_top -%}
   {%- assign padding_bottom        = section.settings.padding_bottom -%}
@@ -17,8 +17,6 @@
   {% comment %} CSS variables start {% endcomment %}
   {%- capture variables -%}
     {%- case padding_top -%}
-      {%- when 'none' -%}
-        --padding-top: 0;
       {%- when 'small' -%}
         --padding-top: 24px;
       {%- when 'medium' -%}
@@ -28,8 +26,6 @@
     {%- endcase -%}
 
     {%- case padding_bottom -%}
-      {%- when 'none' -%}
-        --padding-bottom: 0;
       {%- when 'small' -%}
         --padding-bottom: 24px;
       {%- when 'medium' -%}
@@ -39,8 +35,6 @@
     {%- endcase -%}
 
     {%- case padding_top_mobile -%}
-      {%- when 'none' -%}
-        --padding-top-mobile: 0;
       {%- when 'small' -%}
         --padding-top-mobile: 18px;
       {%- when 'medium' -%}
@@ -50,8 +44,6 @@
     {%- endcase -%}
 
     {%- case padding_bottom_mobile -%}
-      {%- when 'none' -%}
-        --padding-bottom-mobile: 0;
       {%- when 'small' -%}
         --padding-bottom-mobile: 18px;
       {%- when 'medium' -%}
@@ -63,11 +55,15 @@
   {% comment %} CSS variables end {% endcomment %}
 
   <div
-    class="mosaic__wrapper{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} mosaic__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} mosaic__wrapper--padding-bottom{%- endif -%}"
+    class="mosaic__wrapper palette-{{ color_palette }}{% if padding_top != blank or padding_top_mobile != blank %} mosaic__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} mosaic__wrapper--padding-bottom{%- endif -%}"
     style="{{- variables | escape -}}"
   >
     <div class="mosaic__container container">
-      <div class="mosaic__list mosaic__list-{{ layout }}{% if blocks.size > 3 %} mosaic__list-two-rows{%- endif -%}">
+      {%- if title != blank -%}
+        <h2 class="mosaic__title h4">{{- title -}}</h2>
+      {%- endif -%}
+
+      <div class="mosaic__list{% if blocks.size > 3 %} mosaic__list-two-rows{%- endif -%}">
         {%- for block in blocks -%}
           {%- assign article_tag     = block.settings.article_tag -%}
           {%- assign heading         = block.settings.heading -%}
@@ -103,7 +99,7 @@
                 {%- endif -%}
 
                 {%- if heading != blank -%}
-                  <h3 class="mosaic__heading h4">
+                  <h3 class="mosaic__heading h5">
                     {{- heading -}}
                   </h3>
                 {%- endif -%}
@@ -113,10 +109,11 @@
                 {%- endif -%}
 
                 {%- if article_btn != blank and article_btn_url != blank -%}
-                  <a href="{{  article_btn_url }}" class="mosaic__button button button--secondary">
-                    {{- article_btn -}}
-                    {%- render 'icon-arrow-right' -%}
-                  </a>
+                  <div class="mosaic__buttons">
+                    <a href="{{  article_btn_url }}" class="mosaic__button button button--primary button--large">
+                      {{- article_btn -}}
+                    </a>
+                  </div>
                 {%- endif -%}
               </div>
             </div>
@@ -158,9 +155,27 @@
           {
             "value": "two",
             "label": "Color set 2"
+          },
+          {
+            "value": "three",
+            "label": "Color set 3"
+          },
+          {
+            "value": "four",
+            "label": "Color set 4"
+          },
+          {
+            "value": "five",
+            "label": "Color set 5"
           }
         ],
-        "default": "one"
+        "default": "four"
+      },
+      {
+        "type": "text",
+        "id": "title",
+        "label": "Title",
+        "default": "What's in the news"
       },
       {
         "type": "header",
@@ -181,26 +196,6 @@
       {
         "type": "header",
         "content": "Desktop settings"
-      },
-      {
-        "type": "select",
-        "id": "layout",
-        "label": "Layout",
-        "options": [
-          {
-            "value": "small",
-            "label": "Small"
-          },
-          {
-            "value": "left",
-            "label": "Large left, small right"
-          },
-          {
-            "value": "right",
-            "label": "Large right, small left"
-          }
-        ],
-        "default": "left"
       },
       {
         "type": "select",
