--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -313,7 +313,7 @@
 {%- endcapture -%}
 
 <div
-  class="header__inner{% unless transparent_bg %} header__inner-background{% endunless %}{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}"
+  class="header__inner{% unless transparent_bg %} header__inner-background{% endunless %} palette-{{- color_palette -}}"
   style="{{- variables | escape -}}"
 >
   <div class="header__content{% if padding_top != blank or padding_top_mobile != blank %} header__content--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} header__content--padding-bottom{%- endif -%}">
