--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -145,7 +145,7 @@
 {%- endcapture -%}
 {% comment %} CSS variables end {% endcomment %}
 
-<div class="hero__wrapper hero__wrapper-{{- height -}}-height{% if color_palette != blank %} palette-{{ color_palette }}{%- endif -%}" style="{{- variables | escape -}}">
+<div class="hero__wrapper hero__wrapper-{{- height -}}-height palette-{{- color_palette -}}" style="{{- variables | escape -}}">
   <div class="hero__container container{% if padding_top != blank or padding_top_mobile != blank %} hero__container--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} hero__container--padding-bottom{%- endif -%}">
     <div class="hero__text-area{% if show_overlay %} hero__text-area--color{%- endif -%}">
       <div class="hero__content">
