--- a/assets/mosaic.css
+++ b/assets/mosaic.css
@@ -11,7 +11,6 @@
 }
 
 .mosaic__list {
-  padding: 8px 0 0;
   position: relative;
   overflow-x: scroll;
   overflow-y: hidden;
@@ -29,28 +28,16 @@
 .mosaic__item {
   overflow: hidden;
   min-width: 358px;
+  max-width: 358px;
   display: grid;
   grid-template-rows: max-content 1fr;
   scroll-snap-align: start;
   scroll-snap-stop: always;
 }
 
-.mosaic__item-col {
-  display: flex;
-  align-items: flex-start;
-}
-
-.mosaic__item-col--image {
+.mosaic__image-wrapper,
+.mosaic__image-wrapper.no-image {
   aspect-ratio: 1 / 0.73;
-  height: auto;
-}
-
-.mosaic__item-col.no-image {
-  height: 260px;
-}
-
-.mosaic__item-col.no-image + .mosaic__item-col {
-  height: auto;
 }
 
 .mosaic__text-area {
@@ -58,19 +45,17 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-
 }
 
 .mosaic__tag {
   margin: 0 0 8px;
   font-family: var(--font-body, sans-serif);
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .mosaic__heading {
   font-weight: var(--font-weight-bold);
   margin-bottom: 16px;
-  max-width: 450px;
 }
 
 .mosaic__buttons {
@@ -91,26 +76,35 @@
   max-width: none;
 }
 
+.mosaic__show-button {
+  margin: 0;
+}
+
 .mosaic__show-wrapper {
   padding: 31px 0 0;
   text-align: center;
 }
 
-.mosaic__show {
-  margin: 0;
+.mosaic__top .mosaic__show-wrapper {
+  display: none;
+}
+
+.mosaic__top + .mosaic__list {
+  padding: 8px 0 0;
 }
 
 .palette-one.mosaic__wrapper {
-  color: var(--color-secondary-1);
+  color: var(--color-primary-1);
   background: var(--background-primary-1);
 }
 
 .palette-one .mosaic__item {
+  color: var(--background-primary-1);
   background: var(--color-primary-1);
 }
 
-.palette-one .mosaic__item-col.no-image {
-  background: var(--color-image-placeholder-1);
+.palette-one .mosaic__image-wrapper.no-image {
+  background: var(--background-primary-1-hover);
 }
 
 .palette-one .mosaic__heading,
@@ -122,22 +116,18 @@
   fill: var(--background-primary-1);
 }
 
-/* .palette-one .mosaic__button.button:hover,
-.palette-two .mosaic__button.button:hover {
-  text-shadow: 0.5px 0 currentColor;
-} */
-
 .palette-two.mosaic__wrapper {
-  color: var(--color-secondary-2);
+  color: var(--color-primary-2);
   background: var(--background-primary-2);
 }
 
 .palette-two .mosaic__item {
+  color: var(--background-primary-2);
   background: var(--color-primary-2);
 }
 
-.palette-two .mosaic__item-col.no-image {
-  background: var(--color-image-placeholder-2);
+.palette-two .mosaic__image-wrapper.no-image {
+  background: var(--background-primary-2-hover);
 }
 
 .palette-two .mosaic__heading,
@@ -150,16 +140,17 @@
 }
 
 .palette-three.mosaic__wrapper {
-  color: var(--color-secondary-3);
+  color: var(--color-primary-3);
   background: var(--background-primary-3);
 }
 
 .palette-three .mosaic__item {
+  color: var(--background-primary-3);
   background: var(--color-primary-3);
 }
 
-.palette-three .mosaic__item-col.no-image {
-  background: var(--color-image-placeholder-3);
+.palette-three .mosaic__image-wrapper.no-image {
+  background: var(--background-primary-3-hover);
 }
 
 .palette-three .mosaic__heading,
@@ -172,16 +163,17 @@
 }
 
 .palette-four.mosaic__wrapper {
-  color: var(--color-secondary-4);
+  color: var(--color-primary-4);
   background: var(--background-primary-4);
 }
 
 .palette-four .mosaic__item {
+  color: var(--background-primary-4);
   background: var(--color-primary-4);
 }
 
-.palette-four .mosaic__item-col.no-image {
-  background: var(--color-image-placeholder-4);
+.palette-four .mosaic__image-wrapper.no-image {
+  background: var(--background-primary-4-hover);
 }
 
 .palette-four .mosaic__heading,
@@ -194,16 +186,17 @@
 }
 
 .palette-five.mosaic__wrapper {
-  color: var(--color-secondary-5);
+  color: var(--color-primary-5);
   background: var(--background-primary-5);
 }
 
 .palette-five .mosaic__item {
+  color: var(--background-primary-5);
   background: var(--color-primary-5);
 }
 
-.palette-five .mosaic__item-col.no-image {
-  background: var(--color-image-placeholder-5);
+.palette-five .mosaic__image-wrapper.no-image {
+  background: var(--background-primary-5-hover);
 }
 
 .palette-five .mosaic__heading,
@@ -216,81 +209,95 @@
 }
 
 @media (min-width: 992px) {
+  .mosaic__top {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+  }
+
   .mosaic__title {
     font-size: var(--font-size-h2);
+    flex: 1 1 auto;
+    margin: 0;
+    padding-right: 16px;
   }
 
   .mosaic__list {
     display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-    grid-auto-flow: var(--grid-auto-flow);
-    margin: 0 -16px;
-  }
-
-  .mosaic__list-two-rows {
-    grid-template-rows: repeat(var(--grid-row), minmax(0, 1fr));
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 1fr;
   }
 
   .mosaic__item {
-    margin: 16px;
-    padding: 22px;
+    min-width: auto;
+    max-width: none;
+    grid-template-rows: auto;
+    grid-template-columns: repeat(2, 1fr);
   }
 
-  .mosaic__item-col {
-    height: auto;
+  .mosaic__image-wrapper,
+  .mosaic__image-wrapper.no-image {
+    aspect-ratio: auto;
   }
 
   .mosaic__text-area {
-    padding: 10px;
+    padding: 44px 25px;
+  }
+
+  .mosaic__heading {
+    margin-bottom: 9px;
   }
 
   .mosaic__show-wrapper {
-    padding: 78px 0 0;
+    padding: 0;
   }
 
-  .mosaic__item:nth-child(3n + 1) {
-    grid-column: 1 / 3;
+  .mosaic__bottom {
+    display: none;
+  }
+
+  .mosaic__list--3 .mosaic__item:first-child,
+  .mosaic__list--4 .mosaic__item:first-child,
+  .mosaic__list--5 .mosaic__item:first-child,
+  .mosaic__list--6 .mosaic__item:nth-child(3n + 1) {
+    grid-column: 1 / 2;
     grid-row: span 2 / span 2;
-    display: flex;
-    align-items: center;
+    grid-template-columns: auto;
+    grid-template-rows: repeat(2, 1fr);
+    gap: 16px;
   }
 
-  /* .mosaic__list-right .mosaic__item:nth-child(3n) {
-    grid-column: -1 / 2;
-  } */
-
-  /* .mosaic__list-right .mosaic__item:nth-child(3n + 2) {
-    grid-column: 1 / 1;
-  } */
-
-  .mosaic__item:nth-child(3n + 1) .mosaic__item-col {
-    width: 47%;
-    display: flex;
-    align-items: center;
+  .mosaic__list--3 .mosaic__item:first-child .mosaic__text-area,
+  .mosaic__list--4 .mosaic__item:first-child .mosaic__text-area,
+  .mosaic__list--5 .mosaic__item:first-child .mosaic__text-area,
+  .mosaic__list--6 .mosaic__item:nth-child(3n + 1) .mosaic__text-area {
+    padding-top: 28px;
   }
 
-  .mosaic__item:nth-child(3n + 1) .mosaic__item-col:first-child {
-    aspect-ratio: 1 / 1.3;
-    width: 53%;
-    height: 100%;
+  .mosaic__list--3 .mosaic__item:first-child .mosaic__tag,
+  .mosaic__list--4 .mosaic__item:first-child .mosaic__tag,
+  .mosaic__list--5 .mosaic__item:first-child .mosaic__tag,
+  .mosaic__list--6 .mosaic__item:nth-child(3n + 1) .mosaic__tag {
+    margin: 0 0 8px;
   }
 
-  .mosaic__item:nth-child(3n + 1) .mosaic__item-col:first-child.no-image,
-  .mosaic__item:nth-child(3n + 1) .mosaic__item-col--image {
-    height: 100%;
+  .mosaic__list--3 .mosaic__item:first-child .mosaic__heading,
+  .mosaic__list--4 .mosaic__item:first-child .mosaic__heading,
+  .mosaic__list--5 .mosaic__item:first-child .mosaic__heading,
+  .mosaic__list--6 .mosaic__item:nth-child(3n + 1) .mosaic__heading {
+    font-size: 40px;
+    line-height: var(--line-height-md);
+    margin: 0 0 24px;
   }
 
-  .mosaic__item-col--image,
-  .mosaic__item-col.no-image {
-    aspect-ratio: 1 / 0.2;
+  .mosaic__top + .mosaic__list {
+    padding: 50px 0 0;
   }
 
-  .mosaic__text-area {
-    padding: 10px 0 0;
-  }
-
-  .mosaic__item:nth-child(3n + 1) .mosaic__text-area {
-    padding-left: 33px;
+  .mosaic__top .mosaic__show-wrapper {
+    display: block;
+    flex: 0 0 180px;
+    max-width: 180px;
   }
 }
 
@@ -308,6 +315,21 @@
   }
 
   .mosaic__tag {
-    margin: 0 0 16px;
+    margin: 0 0 10px;
+  }
+
+  .mosaic__list,
+  .mosaic__list--3 .mosaic__item:first-child,
+  .mosaic__list--4 .mosaic__item:first-child,
+  .mosaic__list--5 .mosaic__item:first-child,
+  .mosaic__list--6 .mosaic__item:nth-child(3n + 1) {
+    gap: 32px;
+  }
+
+  .mosaic__list--3 .mosaic__item:first-child .mosaic__text-area,
+  .mosaic__list--4 .mosaic__item:first-child .mosaic__text-area,
+  .mosaic__list--5 .mosaic__item:first-child .mosaic__text-area,
+  .mosaic__list--6 .mosaic__item:nth-child(3n + 1) .mosaic__text-area {
+    padding: 5px 49px 37px;
   }
 }
